# OpenGL-Textures

./: CMakeLists.txt  README.md
include/: drawing_lib.h  loader.h  object.h  shader.h  texture.h  utils.h
shaders/: earth.frag  earth.vert  plane.frag  plane.vert  skybox.vert
src/: drawing_lib.cpp  loader.cpp  main.cpp  object.cpp  shader.cpp  texture.cpp
